hotfix: Windows specific styling fix
too much padding was pusing view on strava button to the next line.

maybe flexbox for the next styling iteration...

--- a/client/components/Sidebar.css
+++ b/client/components/Sidebar.css
@@ -12,7 +12,7 @@
     background-color: rgba(15, 15, 15, 0.75);
     z-index: 5;
     border-radius: 5px;
-    font-weight: 800;
+    /* font-weight: 800; */
     font-size: 1.4em;
     display: flex;
     flex-direction: column;
@@ -119,7 +119,7 @@
     font-weight: 800;
     border: 2px solid black;
     border-radius: 15px;
-    padding: 5px 10px 5px 20px;
+    padding: 5px 10px 5px 10px;
     margin: 5px;
     background: lightblue;
 }
